--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "prettier": "^2.6.1",
+    "style-loader": "^3.3.1",
     "typescript": "^4.6.3"
   }
 }
