--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,7 @@
     "plugin:@typescript-eslint/recommended",
     "plugin:jest/recommended",
     "prettier",
+    "plugin:import/recommended",
     "plugin:prettier/recommended"
   ],
   "plugins": ["react", "react-hooks", "@typescript-eslint", "jest"],
